// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LearnMoreCard /> should has tags from prop 1`] = `
<Fragment>
  <div
    className="text-center w-50 max-w-full "
  >
    <figure
      className="relative mb-4 overflow-hidden rounded w-50 h-50"
      style={
        Object {
          "boxShadow": "0px 10px 30px rgba(0, 0, 0, 0.15)",
        }
      }
    >
      <VideoPlayer
        autoplay={false}
        className="absolute inset-0 object-cover w-full h-full"
        controls={false}
        loop={true}
        muted={true}
        playerRef={
          Object {
            "current": null,
          }
        }
        playsInline={true}
        poster="image.jpg"
        style={
          Object {
            "height": "calc(100% + 1px)",
          }
        }
        url="video.jpg"
      />
      <button
        className="absolute inset-0 flex flex-col items-center justify-center w-full transition-all rounded opacity-0 cursor-pointer hover:opacity-100"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="presentation"
        style={
          Object {
            "background": "linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%)",
          }
        }
      >
        <Image
          alt=""
          height="38"
          src="/images/fire-icon.svg"
          width="31"
        />
        <div
          className="mt-2 font-bold tracking-widest text-white uppercase"
        >
          Learn more
        </div>
      </button>
      <div
        className="absolute bottom-0 left-0 right-0 flex justify-center gap-2 px-2 pb-2"
      >
        <Badge
          className="text-xs leading-none"
          key="Test tag 1"
        >
          Test tag 1
        </Badge>
        <Badge
          className="text-xs leading-none"
          key="Test tag 2"
        >
          Test tag 2
        </Badge>
      </div>
    </figure>
    <h3
      className="mb-3 font-serif text-lg font-normal text-secondary"
    >
      Test title
    </h3>
    <div
      className="font-serif text-sm text-septenary"
    >
      Test short description
    </div>
  </div>
</Fragment>
`;

exports[`<LearnMoreCard /> should renders correct <LearnMoreCard /> 1`] = `
<Fragment>
  <div
    className="text-center w-50 max-w-full "
  >
    <figure
      className="relative mb-4 overflow-hidden rounded w-50 h-50"
      style={
        Object {
          "boxShadow": "0px 10px 30px rgba(0, 0, 0, 0.15)",
        }
      }
    >
      <VideoPlayer
        autoplay={false}
        className="absolute inset-0 object-cover w-full h-full"
        controls={false}
        loop={true}
        muted={true}
        playerRef={
          Object {
            "current": null,
          }
        }
        playsInline={true}
        poster="image.jpg"
        style={
          Object {
            "height": "calc(100% + 1px)",
          }
        }
        url="video.jpg"
      />
      <button
        className="absolute inset-0 flex flex-col items-center justify-center w-full transition-all rounded opacity-0 cursor-pointer hover:opacity-100"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        role="presentation"
        style={
          Object {
            "background": "linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%)",
          }
        }
      >
        <Image
          alt=""
          height="38"
          src="/images/fire-icon.svg"
          width="31"
        />
        <div
          className="mt-2 font-bold tracking-widest text-white uppercase"
        >
          Learn more
        </div>
      </button>
    </figure>
    <h3
      className="mb-3 font-serif text-lg font-normal text-secondary"
    >
      Test title
    </h3>
    <div
      className="font-serif text-sm text-septenary"
    >
      Test short description
    </div>
  </div>
</Fragment>
`;
